test/lit/vmi_new/vmi_layout_e2e_vbrc_group.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// RUN: pto-test-opt %s -vmi-lower-unified-to-legacy 2>&1 | FileCheck %s

// E2E: vbrc with num_groups → skipped by two-stage lowering (Category D path).

module {
  func.func @vbrc_group_skip(%s: !pto.vmi.vreg<8xf32,
      #pto.vmi.layout<num_groups = 8, slots = 1>>) -> !pto.vmi.vreg<64xf32> {
    %r = pto.vmi.vbrc %s {num_groups = 8}
        : !pto.vmi.vreg<8xf32, #pto.vmi.layout<num_groups = 8, slots = 1>>
        -> !pto.vmi.vreg<64xf32>
    return %r : !pto.vmi.vreg<64xf32>
  }
}

// vbrc with num_groups is preserved (skipped) in two-stage lowering
// CHECK: pto.vmi.vbrc
// CHECK-NOT: error:
